--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -134,6 +136,7 @@
   --color-grey-60: #98989a;
   --color-grey-70: #b3b3b3;
   --color-grey-80: #cccccc;
+  --font-sans: "Kumbh Sans", sans-serif;
   /*--color-grey-90: #;*/
 }
 
@@ -142,6 +145,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-dark-10 text-white;
+    @apply bg-dark-10 text-white font-sans;
   }
 }
